--- a/mini/miniprogram/app.json
+++ b/mini/miniprogram/app.json
@@ -1,25 +1,39 @@
 {
   "pages": [
-    "pages/index/index",
-    "pages/userConsole/userConsole",
-    "pages/storageConsole/storageConsole",
-    "pages/databaseGuide/databaseGuide",
-    "pages/addFunction/addFunction",
-    "pages/deployFunctions/deployFunctions",
-    "pages/chooseLib/chooseLib",
-    "pages/openapi/openapi",
-    "pages/openapi/serverapi/serverapi",
-    "pages/openapi/callback/callback",
-    "pages/openapi/cloudid/cloudid",
-    "pages/im/im",
-    "pages/im/room/room"
+    "pages/home/home",
+    "pages/find/find",
+    "pages/me/me"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
     "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#F6F6F6",
-    "navigationBarTitleText": "云开发 QuickStart",
-    "navigationBarTextStyle": "black"
+    "navigationBarBackgroundColor": "#FF59D3",
+    "navigationBarTitleText": "小小熊の音乐",
+    "navigationBarTextStyle": "white"
+  },
+  "tabBar": {
+    "color": "#515151",
+    "selectedColor": "#FF59D3",
+    "list": [
+      {
+        "pagePath": "pages/home/home",
+        "text":"音乐",
+        "iconPath": "images/music.png",
+        "selectedIconPath": "images/music-selected.png"
+      },
+      {
+        "pagePath": "pages/find/find",
+        "text":"发现",
+        "iconPath": "images/find.png",
+        "selectedIconPath": "images/find-selected.png"
+      },
+      {
+        "pagePath": "pages/me/me",
+        "text":"我的",
+        "iconPath": "images/me.png",
+        "selectedIconPath": "images/me-selected.png"
+      }
+    ]
   },
   "sitemapLocation": "sitemap.json",
   "style": "v2"
