--- a/mini/miniprogram/app.json
+++ b/mini/miniprogram/app.json
@@ -3,7 +3,8 @@
     "pages/home/home",
     "pages/find/find",
     "pages/me/me",
-    "components/playlist/playlist"
+    "components/playlist/playlist",
+    "pages/musiclist/musiclist"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
