feat:选中音乐并创建音乐播放页

--- a/mini/miniprogram/app.json
+++ b/mini/miniprogram/app.json
@@ -4,7 +4,8 @@
     "pages/find/find",
     "pages/me/me",
     "components/playlist/playlist",
-    "pages/musiclist/musiclist"
+    "pages/musiclist/musiclist",
+    "pages/player/player"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
