feat:酷狗歌词接口请求(需写入cookie值)

--- a/mini/cloudfunctions/music/package.json
+++ b/mini/cloudfunctions/music/package.json
@@ -12,6 +12,7 @@
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
     "tcb-router": "^1.1.2",
+    "tough-cookie": "^4.0.0",
     "wx-server-sdk": "latest"
   }
 }
