feat:完成授权组件封装及获取用户信息接口判断

--- a/mini/miniprogram/app.json
+++ b/mini/miniprogram/app.json
@@ -4,7 +4,8 @@
     "pages/find/find",
     "pages/me/me",
     "pages/musiclist/musiclist",
-    "pages/player/player"
+    "pages/player/player",
+    "pages/blog/blog"
   ],
   "requiredBackgroundModes": [
     "audio"
