feat:完成动态图片选中

--- a/mini/miniprogram/app.json
+++ b/mini/miniprogram/app.json
@@ -29,7 +29,7 @@
       },
       {
         "pagePath": "pages/find/find",
-        "text": "发现",
+        "text": "动态",
         "iconPath": "images/find.png",
         "selectedIconPath": "images/find-selected.png"
       },
