feat:完成我的布局

--- a/mini/miniprogram/app.json
+++ b/mini/miniprogram/app.json
@@ -6,7 +6,9 @@
     "pages/musiclist/musiclist",
     "pages/player/player",
     "pages/blog/blog",
-    "pages/comment/comment"
+    "pages/comment/comment",
+    "pages/playhistory/playhistory",
+    "pages/bloghistory/bloghistory"
   ],
   "requiredBackgroundModes": [
     "audio"
