--- a/mini/miniprogram/app.json
+++ b/mini/miniprogram/app.json
@@ -8,7 +8,8 @@
     "pages/blog/blog",
     "pages/comment/comment",
     "pages/playhistory/playhistory",
-    "pages/bloghistory/bloghistory"
+    "pages/bloghistory/bloghistory",
+    "pages/blessing/blessing"
   ],
   "requiredBackgroundModes": [
     "audio"
