feat:完成祝福 && 我们的点滴页面

--- a/mini/miniprogram/app.json
+++ b/mini/miniprogram/app.json
@@ -9,7 +9,8 @@
     "pages/comment/comment",
     "pages/playhistory/playhistory",
     "pages/bloghistory/bloghistory",
-    "pages/blessing/blessing"
+    "pages/blessing/blessing",
+    "pages/life/life"
   ],
   "requiredBackgroundModes": [
     "audio"
