--- a/manager/admin-backend/package.json
+++ b/manager/admin-backend/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/PCAaron/minapp#readme",
   "dependencies": {
     "koa": "^2.13.0",
+    "koa-router": "^10.0.0",
     "request": "^2.88.2",
     "request-promise": "^4.2.6"
   }
