--- a/manager/admin-backend/package.json
+++ b/manager/admin-backend/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "koa": "^2.13.0",
     "koa-router": "^10.0.0",
+    "koa2-cors": "^2.0.6",
     "request": "^2.88.2",
     "request-promise": "^4.2.6"
   }
