feat:轮播添加跳转 && 重构历史播放 && 更新播放器接口

--- a/mini/miniprogram/app.json
+++ b/mini/miniprogram/app.json
@@ -13,7 +13,8 @@
     "pages/life/life",
     "pages/about/about",
     "pages/userlist/userlist",
-    "pages/musicMenus/musicMenus"
+    "pages/musicMenus/musicMenus",
+    "pages/media/media"
   ],
   "permission": {
     "scope.userLocation": {
