--- a/mini/miniprogram/app.json
+++ b/mini/miniprogram/app.json
@@ -1,5 +1,6 @@
 {
   "pages": [
+    "pages/index/index",
     "pages/home/home",
     "pages/find/find",
     "pages/me/me",
@@ -16,7 +17,9 @@
     "pages/musicMenus/musicMenus",
     "pages/media/media",
     "pages/video/video",
-    "pages/videodetail/videodetail"
+    "pages/videodetail/videodetail",
+    "pages/barrage/barrage",
+    "pages/loveTime/loveTime"
   ],
   "permission": {
     "scope.userLocation": {
@@ -30,7 +33,7 @@
     "backgroundColor": "#F6F6F6",
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#FFA5C2",
-    "navigationBarTitleText": "小小熊の音乐",
+    "navigationBarTitleText": "Loveの小小熊",
     "navigationBarTextStyle": "white"
   },
   "tabBar": {
@@ -38,16 +41,22 @@
     "selectedColor": "#FFA5C2",
     "list": [
       {
+        "pagePath": "pages/index/index",
+        "text": "首页",
+        "iconPath": "images/love.png",
+        "selectedIconPath": "images/love-selected.png"
+      },
+      {
+        "pagePath": "pages/loveTime/loveTime",
+        "text": "恋爱时光",
+        "iconPath": "images/love.png",
+        "selectedIconPath": "images/love-selected.png"
+      },
+      {
         "pagePath": "pages/home/home",
         "text": "音乐",
         "iconPath": "images/music.png",
         "selectedIconPath": "images/music-selected.png"
-      },
-      {
-        "pagePath": "pages/video/video",
-        "text": "MV",
-        "iconPath": "images/video.png",
-        "selectedIconPath": "images/video-selected.png"
       },
       {
         "pagePath": "pages/find/find",
